magicmirror/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: magicmirror
  labels:
    name: magicmirror
spec:
  replicas: 2
  selector:
    matchLabels:
      name: magicmirror
  template:
    metadata:
      labels:
        name: magicmirror
    spec:
      containers:
        - image: chrisns/magicmirror:latest
          name: magicmirror
          securityContext:
            runAsUser: 100
            readOnlyRootFilesystem: true
          resources:
            limits:
              memory: 12Mi
              cpu: 0.01
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /var/cache/nginx
              name: cache
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
      restartPolicy: Always
      volumes:
        - name: cache
          emptyDir: {}
