magicmirror/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: magicmirror
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    name: magicmirror
