magicmirror/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: magicmirror
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: magicmirror-auth

spec:
  rules:
  - host: magicmirror.p.cns.me
    http:
      paths:
      - backend:
          serviceName: magicmirror
          servicePort: 80
